StarTransit 5.0.1.X: Preserve folder structure of opened transit package

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,4 @@ TMX_TranslationProvider/TMX_TranslationProviderWithUITest.sln
 /memoQ TM Provider/_bin/TMProvider.dll
 /memoQ TM Provider/_bin/zh-Hans/memoQPlugin.resources.dll
 /Jobs/Sdl.Community.Jobs/Properties/launchSettings.json
+StarTransit/.editorconfig
