--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -87,6 +87,9 @@
 		<Reference Include="Newtonsoft.Json">
 		  <HintPath>$(TradosFolder)\Newtonsoft.Json.dll</HintPath>
 		</Reference>
+		<Reference Include="NLog">
+		  <HintPath>$(TradosFolder)\NLog.dll</HintPath>
+		</Reference>
 		<Reference Include="Sdl.Core.Globalization">
 			<HintPath>$(TradosFolder)\Sdl.Core.Globalization.dll</HintPath>
 		</Reference>
