--- a/Code samples/StandAloneConsoleApp_PretranslateUsingProvider/StandAloneConsoleApp_PretranslateUsingProvider.csproj
+++ b/Code samples/StandAloneConsoleApp_PretranslateUsingProvider/StandAloneConsoleApp_PretranslateUsingProvider.csproj
@@ -3,7 +3,7 @@
 		<TargetFramework>net48</TargetFramework>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<CreatePluginPackage>true</CreatePluginPackage>
-		<AssemblyOriginatorKeyFile>C:\Code\SDL\GitHub repos\RWS Community\SdlCommunity.snk</AssemblyOriginatorKeyFile>
+		<AssemblyOriginatorKeyFile>C:\Users\aflorescu\Code\SamplesRepo\Sdl-Community\SdlCommunity.snk</AssemblyOriginatorKeyFile>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
 		<SignAssembly>true</SignAssembly>
@@ -15,6 +15,9 @@
 	<ItemGroup>
 		<Reference Include="Sdl.Core.Globalization">
 			<HintPath>$(TradosFolder)\Sdl.Core.Globalization.dll</HintPath>
+		</Reference>
+		<Reference Include="Sdl.Core.Globalization.Async">
+			<HintPath>$(TradosFolder)\Sdl.Core.Globalization.Async.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Core.Settings">
 			<HintPath>$(TradosFolder)\Sdl.Core.Settings.dll</HintPath>
