GoogleCloudTranslationProvider 2.0.1.0 - CRQ-40113: Fixed Signing Path

--- a/Code samples/StandAloneConsoleApp_PreTranslateUsingGoogleProvider/StandAloneConsoleApp_PreTranslateUsingGoogleProvider/StandAloneConsoleApp_PreTranslateUsingGoogleProvider.csproj
+++ b/Code samples/StandAloneConsoleApp_PreTranslateUsingGoogleProvider/StandAloneConsoleApp_PreTranslateUsingGoogleProvider/StandAloneConsoleApp_PreTranslateUsingGoogleProvider.csproj
@@ -3,7 +3,7 @@
 		<TargetFramework>net48</TargetFramework>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<CreatePluginPackage>true</CreatePluginPackage>
-		<AssemblyOriginatorKeyFile>..\..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
+		<AssemblyOriginatorKeyFile>..\..\..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
 		<SignAssembly>true</SignAssembly>
